tests/udn_and_vms_test_5/foo_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"creationTimestamp":null,"labels":{"k8s.ovn.org/primary-user-defined-network":""},"name":"foo"},"spec":{},"status":{}}
    openshift.io/sa.scc.mcs: s0:c27,c24
    openshift.io/sa.scc.supplemental-groups: 1000750000/10000
    openshift.io/sa.scc.uid-range: 1000750000/10000
  creationTimestamp: "2025-02-26T11:38:40Z"
  labels:
    k8s.ovn.org/primary-user-defined-network: ""
    kubernetes.io/metadata.name: foo
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
  name: foo
  resourceVersion: "41050"
  uid: 240a1a21-53c6-4643-82ab-48ea9e6ca3e5
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
