tests/udn_and_vms_test_5/foo_vm_pods.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      descheduler.alpha.kubernetes.io/request-evict-only: ""
      k8s.ovn.org/pod-networks: '{"default":{"ip_addresses":["10.128.2.27/23"],"mac_address":"0a:58:0a:80:02:1b","routes":[{"dest":"10.128.0.0/14","nextHop":"10.128.2.1"},{"dest":"100.64.0.0/16","nextHop":"10.128.2.1"}],"ip_address":"10.128.2.27/23","role":"infrastructure-locked"},"foo/primary-udn":{"ip_addresses":["192.168.0.4/24"],"mac_address":"0a:58:c0:a8:00:04","gateway_ips":["192.168.0.1"],"routes":[{"dest":"172.30.0.0/16","nextHop":"192.168.0.1"},{"dest":"100.65.0.0/16","nextHop":"192.168 [...]
      k8s.ovn.org/primary-udn-ipamclaim: fedora-apricot-pike-81.default
      k8s.v1.cni.cncf.io/network-status: |-
        [{
            "name": "ovn-kubernetes",
            "interface": "eth0",
            "ips": [
                "10.128.2.27"
            ],
            "mac": "0a:58:0a:80:02:1b",
            "dns": {}
        },{
            "name": "ovn-kubernetes",
            "interface": "ovn-udn1",
            "ips": [
                "192.168.0.4"
            ],
            "mac": "0a:58:c0:a8:00:04",
            "default": true,
            "dns": {}
        }]
      kubectl.kubernetes.io/default-container: compute
      kubevirt.io/domain: fedora-apricot-pike-81
      kubevirt.io/migrationTransportUnix: "true"
      kubevirt.io/vm-generation: "1"
      openshift.io/scc: kubevirt-controller
      post.hook.backup.velero.io/command: '["/usr/bin/virt-freezer", "--unfreeze",
        "--name", "fedora-apricot-pike-81", "--namespace", "foo"]'
      post.hook.backup.velero.io/container: compute
      pre.hook.backup.velero.io/command: '["/usr/bin/virt-freezer", "--freeze", "--name",
        "fedora-apricot-pike-81", "--namespace", "foo"]'
      pre.hook.backup.velero.io/container: compute
      seccomp.security.alpha.kubernetes.io/pod: localhost/kubevirt/kubevirt.json
      vm.kubevirt.io/flavor: small
      vm.kubevirt.io/os: fedora
      vm.kubevirt.io/workload: server
    creationTimestamp: "2025-03-03T07:09:47Z"
    generateName: virt-launcher-fedora-apricot-pike-81-
    labels:
      kubevirt.io: virt-launcher
      kubevirt.io/created-by: 9ed1a772-dec8-4337-b8d9-9eef549980b2
      kubevirt.io/domain: fedora-apricot-pike-81
      kubevirt.io/nodeName: ci-ln-53lw7bk-72292-hvkdw-worker-a-jb86m
      kubevirt.io/size: small
      vm.kubevirt.io/name: fedora-apricot-pike-81
    name: virt-launcher-fedora-apricot-pike-81-qr48r
    namespace: foo
    ownerReferences:
    - apiVersion: kubevirt.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: VirtualMachineInstance
      name: fedora-apricot-pike-81
      uid: 9ed1a772-dec8-4337-b8d9-9eef549980b2
    resourceVersion: "48180"
    uid: d6ba41c4-7c76-427f-9c3e-c7eae5c926c1
  spec:
    affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchExpressions:
            - key: node-labeller.kubevirt.io/obsolete-host-model
              operator: DoesNotExist
    automountServiceAccountToken: false
    containers:
    - command:
      - /usr/bin/virt-launcher-monitor
      - --qemu-timeout
      - 278s
      - --name
      - fedora-apricot-pike-81
      - --uid
      - 9ed1a772-dec8-4337-b8d9-9eef549980b2
      - --namespace
      - foo
      - --kubevirt-share-dir
      - /var/run/kubevirt
      - --ephemeral-disk-dir
      - /var/run/kubevirt-ephemeral-disks
      - --container-disk-dir
      - /var/run/kubevirt/container-disks
      - --grace-period-seconds
      - "195"
      - --hook-sidecars
      - "0"
      - --ovmf-path
      - /usr/share/OVMF
      - --run-as-nonroot
      env:
      - name: XDG_CACHE_HOME
        value: /var/run/kubevirt-private
      - name: XDG_CONFIG_HOME
        value: /var/run/kubevirt-private
      - name: XDG_RUNTIME_DIR
        value: /var/run
      - name: POD_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.name
      image: registry.redhat.io/container-native-virtualization/virt-launcher-rhel9@sha256:250bbd4d6f93670a26e559869004bddf34744e86a8e7d1ef534932e7f443417d
      imagePullPolicy: IfNotPresent
      name: compute
      resources:
        limits:
          devices.kubevirt.io/kvm: "1"
          devices.kubevirt.io/tun: "1"
          devices.kubevirt.io/vhost-net: "1"
        requests:
          cpu: 100m
          devices.kubevirt.io/kvm: "1"
          devices.kubevirt.io/tun: "1"
          devices.kubevirt.io/vhost-net: "1"
          ephemeral-storage: 50M
          memory: 2299Mi
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          add:
          - NET_BIND_SERVICE
          drop:
          - ALL
        privileged: false
        runAsGroup: 107
        runAsNonRoot: true
        runAsUser: 107
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeDevices:
      - devicePath: /dev/rootdisk
        name: rootdisk
      volumeMounts:
      - mountPath: /var/run/kubevirt-private
        name: private
      - mountPath: /var/run/kubevirt
        name: public
      - mountPath: /var/run/kubevirt-ephemeral-disks
        name: ephemeral-disks
      - mountPath: /var/run/kubevirt/container-disks
        mountPropagation: HostToContainer
        name: container-disks
      - mountPath: /var/run/libvirt
        name: libvirt-runtime
      - mountPath: /var/run/kubevirt/sockets
        name: sockets
      - mountPath: /var/run/kubevirt/hotplug-disks
        mountPropagation: HostToContainer
        name: hotplug-disks
    dnsPolicy: ClusterFirst
    enableServiceLinks: false
    hostname: fedora-apricot-pike-81
    imagePullSecrets:
    - name: default-dockercfg-2z8s5
    nodeName: ci-ln-53lw7bk-72292-hvkdw-worker-a-jb86m
    nodeSelector:
      kubernetes.io/arch: amd64
      kubevirt.io/schedulable: "true"
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    readinessGates:
    - conditionType: kubevirt.io/virtual-machine-unpaused
    restartPolicy: Never
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 107
      runAsGroup: 107
      runAsNonRoot: true
      runAsUser: 107
      seccompProfile:
        localhostProfile: kubevirt/kubevirt.json
        type: Localhost
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 210
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - emptyDir: {}
      name: private
    - emptyDir: {}
      name: public
    - emptyDir: {}
      name: sockets
    - emptyDir: {}
      name: virt-bin-share-dir
    - emptyDir: {}
      name: libvirt-runtime
    - emptyDir: {}
      name: ephemeral-disks
    - emptyDir: {}
      name: container-disks
    - name: rootdisk
      persistentVolumeClaim:
        claimName: fedora-apricot-pike-81
    - emptyDir: {}
      name: hotplug-disks
  status:
    conditions:
    - lastProbeTime: "2025-03-03T07:09:47Z"
      lastTransitionTime: "2025-03-03T07:09:47Z"
      message: the virtual machine is not paused
      reason: NotPaused
      status: "True"
      type: kubevirt.io/virtual-machine-unpaused
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:11:08Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:11:06Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:11:08Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:11:08Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:11:06Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: cri-o://d79f64955f9236b99071e81054f617a7b90fd2225191c66b9e8c8943a61c945b
      image: registry.redhat.io/container-native-virtualization/virt-launcher-rhel9@sha256:250bbd4d6f93670a26e559869004bddf34744e86a8e7d1ef534932e7f443417d
      imageID: registry.redhat.io/container-native-virtualization/virt-launcher-rhel9@sha256:250bbd4d6f93670a26e559869004bddf34744e86a8e7d1ef534932e7f443417d
      lastState: {}
      name: compute
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-03-03T07:11:07Z"
      volumeMounts:
      - mountPath: /var/run/kubevirt-private
        name: private
      - mountPath: /var/run/kubevirt
        name: public
      - mountPath: /var/run/kubevirt-ephemeral-disks
        name: ephemeral-disks
      - mountPath: /var/run/kubevirt/container-disks
        name: container-disks
      - mountPath: /var/run/libvirt
        name: libvirt-runtime
      - mountPath: /var/run/kubevirt/sockets
        name: sockets
      - mountPath: /var/run/kubevirt/hotplug-disks
        name: hotplug-disks
    hostIP: 10.0.128.4
    hostIPs:
    - ip: 10.0.128.4
    phase: Running
    podIP: 10.128.2.27
    podIPs:
    - ip: 10.128.2.27
    qosClass: Burstable
    startTime: "2025-03-03T07:11:06Z"
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      descheduler.alpha.kubernetes.io/request-evict-only: ""
      k8s.ovn.org/pod-networks: '{"default":{"ip_addresses":["10.129.2.36/23"],"mac_address":"0a:58:0a:81:02:24","routes":[{"dest":"10.128.0.0/14","nextHop":"10.129.2.1"},{"dest":"100.64.0.0/16","nextHop":"10.129.2.1"}],"ip_address":"10.129.2.36/23","role":"infrastructure-locked"},"foo/primary-udn":{"ip_addresses":["192.168.0.3/24"],"mac_address":"0a:58:c0:a8:00:03","gateway_ips":["192.168.0.1"],"routes":[{"dest":"172.30.0.0/16","nextHop":"192.168.0.1"},{"dest":"100.65.0.0/16","nextHop":"192.168 [...]
      k8s.ovn.org/primary-udn-ipamclaim: fedora-tomato-zebra-41.default
      k8s.v1.cni.cncf.io/network-status: |-
        [{
            "name": "ovn-kubernetes",
            "interface": "eth0",
            "ips": [
                "10.129.2.36"
            ],
            "mac": "0a:58:0a:81:02:24",
            "dns": {}
        },{
            "name": "ovn-kubernetes",
            "interface": "ovn-udn1",
            "ips": [
                "192.168.0.3"
            ],
            "mac": "0a:58:c0:a8:00:03",
            "default": true,
            "dns": {}
        }]
      kubectl.kubernetes.io/default-container: compute
      kubevirt.io/domain: fedora-tomato-zebra-41
      kubevirt.io/migrationTransportUnix: "true"
      kubevirt.io/vm-generation: "1"
      openshift.io/scc: kubevirt-controller
      post.hook.backup.velero.io/command: '["/usr/bin/virt-freezer", "--unfreeze",
        "--name", "fedora-tomato-zebra-41", "--namespace", "foo"]'
      post.hook.backup.velero.io/container: compute
      pre.hook.backup.velero.io/command: '["/usr/bin/virt-freezer", "--freeze", "--name",
        "fedora-tomato-zebra-41", "--namespace", "foo"]'
      pre.hook.backup.velero.io/container: compute
      seccomp.security.alpha.kubernetes.io/pod: localhost/kubevirt/kubevirt.json
      vm.kubevirt.io/flavor: small
      vm.kubevirt.io/os: fedora
      vm.kubevirt.io/workload: server
    creationTimestamp: "2025-03-03T07:04:34Z"
    generateName: virt-launcher-fedora-tomato-zebra-41-
    labels:
      kubevirt.io: virt-launcher
      kubevirt.io/created-by: 617b84fa-f79a-4410-b474-4a402c04390a
      kubevirt.io/domain: fedora-tomato-zebra-41
      kubevirt.io/nodeName: ci-ln-53lw7bk-72292-hvkdw-worker-b-nlrkh
      kubevirt.io/size: small
      vm.kubevirt.io/name: fedora-tomato-zebra-41
    name: virt-launcher-fedora-tomato-zebra-41-v2gl4
    namespace: foo
    ownerReferences:
    - apiVersion: kubevirt.io/v1
      blockOwnerDeletion: true
      controller: true
      kind: VirtualMachineInstance
      name: fedora-tomato-zebra-41
      uid: 617b84fa-f79a-4410-b474-4a402c04390a
    resourceVersion: "45196"
    uid: 9eb33bf0-168c-46ab-af2b-b79276a9285e
  spec:
    affinity:
      nodeAffinity:
        requiredDuringSchedulingIgnoredDuringExecution:
          nodeSelectorTerms:
          - matchExpressions:
            - key: node-labeller.kubevirt.io/obsolete-host-model
              operator: DoesNotExist
    automountServiceAccountToken: false
    containers:
    - command:
      - /usr/bin/virt-launcher-monitor
      - --qemu-timeout
      - 336s
      - --name
      - fedora-tomato-zebra-41
      - --uid
      - 617b84fa-f79a-4410-b474-4a402c04390a
      - --namespace
      - foo
      - --kubevirt-share-dir
      - /var/run/kubevirt
      - --ephemeral-disk-dir
      - /var/run/kubevirt-ephemeral-disks
      - --container-disk-dir
      - /var/run/kubevirt/container-disks
      - --grace-period-seconds
      - "195"
      - --hook-sidecars
      - "0"
      - --ovmf-path
      - /usr/share/OVMF
      - --run-as-nonroot
      env:
      - name: XDG_CACHE_HOME
        value: /var/run/kubevirt-private
      - name: XDG_CONFIG_HOME
        value: /var/run/kubevirt-private
      - name: XDG_RUNTIME_DIR
        value: /var/run
      - name: POD_NAME
        valueFrom:
          fieldRef:
            apiVersion: v1
            fieldPath: metadata.name
      image: registry.redhat.io/container-native-virtualization/virt-launcher-rhel9@sha256:250bbd4d6f93670a26e559869004bddf34744e86a8e7d1ef534932e7f443417d
      imagePullPolicy: IfNotPresent
      name: compute
      resources:
        limits:
          devices.kubevirt.io/kvm: "1"
          devices.kubevirt.io/tun: "1"
          devices.kubevirt.io/vhost-net: "1"
        requests:
          cpu: 100m
          devices.kubevirt.io/kvm: "1"
          devices.kubevirt.io/tun: "1"
          devices.kubevirt.io/vhost-net: "1"
          ephemeral-storage: 50M
          memory: 2299Mi
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          add:
          - NET_BIND_SERVICE
          drop:
          - ALL
        privileged: false
        runAsGroup: 107
        runAsNonRoot: true
        runAsUser: 107
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeDevices:
      - devicePath: /dev/rootdisk
        name: rootdisk
      volumeMounts:
      - mountPath: /var/run/kubevirt-private
        name: private
      - mountPath: /var/run/kubevirt
        name: public
      - mountPath: /var/run/kubevirt-ephemeral-disks
        name: ephemeral-disks
      - mountPath: /var/run/kubevirt/container-disks
        mountPropagation: HostToContainer
        name: container-disks
      - mountPath: /var/run/libvirt
        name: libvirt-runtime
      - mountPath: /var/run/kubevirt/sockets
        name: sockets
      - mountPath: /var/run/kubevirt/hotplug-disks
        mountPropagation: HostToContainer
        name: hotplug-disks
    dnsPolicy: ClusterFirst
    enableServiceLinks: false
    hostname: fedora-tomato-zebra-41
    imagePullSecrets:
    - name: default-dockercfg-2z8s5
    nodeName: ci-ln-53lw7bk-72292-hvkdw-worker-b-nlrkh
    nodeSelector:
      kubernetes.io/arch: amd64
      kubevirt.io/schedulable: "true"
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    readinessGates:
    - conditionType: kubevirt.io/virtual-machine-unpaused
    restartPolicy: Never
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 107
      runAsGroup: 107
      runAsNonRoot: true
      runAsUser: 107
      seccompProfile:
        localhostProfile: kubevirt/kubevirt.json
        type: Localhost
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 210
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - emptyDir: {}
      name: private
    - emptyDir: {}
      name: public
    - emptyDir: {}
      name: sockets
    - emptyDir: {}
      name: virt-bin-share-dir
    - emptyDir: {}
      name: libvirt-runtime
    - emptyDir: {}
      name: ephemeral-disks
    - emptyDir: {}
      name: container-disks
    - name: rootdisk
      persistentVolumeClaim:
        claimName: fedora-tomato-zebra-41
    - emptyDir: {}
      name: hotplug-disks
  status:
    conditions:
    - lastProbeTime: "2025-03-03T07:04:34Z"
      lastTransitionTime: "2025-03-03T07:04:34Z"
      message: the virtual machine is not paused
      reason: NotPaused
      status: "True"
      type: kubevirt.io/virtual-machine-unpaused
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:05:56Z"
      status: "True"
      type: PodReadyToStartContainers
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:05:53Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:05:56Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:05:56Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:05:53Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: cri-o://5c62e9f0081e97a5d71f70064e3d8b8416abe4db522b80f52a65f4d05a57a1f9
      image: registry.redhat.io/container-native-virtualization/virt-launcher-rhel9@sha256:250bbd4d6f93670a26e559869004bddf34744e86a8e7d1ef534932e7f443417d
      imageID: registry.redhat.io/container-native-virtualization/virt-launcher-rhel9@sha256:250bbd4d6f93670a26e559869004bddf34744e86a8e7d1ef534932e7f443417d
      lastState: {}
      name: compute
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2025-03-03T07:05:56Z"
      volumeMounts:
      - mountPath: /var/run/kubevirt-private
        name: private
      - mountPath: /var/run/kubevirt
        name: public
      - mountPath: /var/run/kubevirt-ephemeral-disks
        name: ephemeral-disks
      - mountPath: /var/run/kubevirt/container-disks
        name: container-disks
      - mountPath: /var/run/libvirt
        name: libvirt-runtime
      - mountPath: /var/run/kubevirt/sockets
        name: sockets
      - mountPath: /var/run/kubevirt/hotplug-disks
        name: hotplug-disks
    hostIP: 10.0.128.2
    hostIPs:
    - ip: 10.0.128.2
    phase: Running
    podIP: 10.129.2.36
    podIPs:
    - ip: 10.129.2.36
    qosClass: Burstable
    startTime: "2025-03-03T07:05:53Z"
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
