tests/udn_and_vms_test_5/foo_vms.yaml
apiVersion: v1
items:
- apiVersion: kubevirt.io/v1
  kind: VirtualMachine
  metadata:
    annotations:
      kubevirt.io/latest-observed-api-version: v1
      kubevirt.io/storage-observed-api-version: v1
      vm.kubevirt.io/validations: |
        [
          {
            "name": "minimal-required-memory",
            "path": "jsonpath::.spec.domain.memory.guest",
            "rule": "integer",
            "message": "This VM requires more memory.",
            "min": 2147483648
          }
        ]
    creationTimestamp: "2025-03-03T07:09:46Z"
    finalizers:
    - kubevirt.io/virtualMachineControllerFinalize
    generation: 1
    labels:
      app: fedora-apricot-pike-81
      kubevirt.io/dynamic-credentials-support: "true"
      vm.kubevirt.io/template: fedora-server-small
      vm.kubevirt.io/template.namespace: openshift
      vm.kubevirt.io/template.revision: "1"
      vm.kubevirt.io/template.version: v0.32.2
    name: fedora-apricot-pike-81
    namespace: foo
    resourceVersion: "47253"
    uid: 321f04f7-8e93-4fc4-8e0e-4688f908c393
  spec:
    dataVolumeTemplates:
    - apiVersion: cdi.kubevirt.io/v1beta1
      kind: DataVolume
      metadata:
        creationTimestamp: null
        name: fedora-apricot-pike-81
      spec:
        sourceRef:
          kind: DataSource
          name: fedora
          namespace: openshift-virtualization-os-images
        storage:
          resources:
            requests:
              storage: 30Gi
    runStrategy: RerunOnFailure
    template:
      metadata:
        annotations:
          vm.kubevirt.io/flavor: small
          vm.kubevirt.io/os: fedora
          vm.kubevirt.io/workload: server
        creationTimestamp: null
        labels:
          kubevirt.io/domain: fedora-apricot-pike-81
          kubevirt.io/size: small
      spec:
        architecture: amd64
        domain:
          cpu:
            cores: 1
            sockets: 1
            threads: 1
          devices:
            disks:
            - disk:
                bus: virtio
              name: rootdisk
            - disk:
                bus: virtio
              name: cloudinitdisk
            interfaces:
            - binding:
                name: l2bridge
              model: virtio
              name: default
            rng: {}
          features:
            acpi: {}
            smm:
              enabled: true
          firmware:
            bootloader:
              efi: {}
          machine:
            type: pc-q35-rhel9.4.0
          memory:
            guest: 2Gi
          resources: {}
        networks:
        - name: default
          pod: {}
        terminationGracePeriodSeconds: 180
        volumes:
        - dataVolume:
            name: fedora-apricot-pike-81
          name: rootdisk
        - cloudInitNoCloud:
            userData: |-
              #cloud-config
              user: fedora
              password: ttiy-hs58-8ndr
              chpasswd: { expire: False }
          name: cloudinitdisk
  status:
    conditions:
    - lastProbeTime: "2025-03-03T07:09:47Z"
      lastTransitionTime: "2025-03-03T07:09:47Z"
      message: Guest VM is not reported as running
      reason: GuestNotRunning
      status: "False"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: null
      message: Not all of the VMI's DVs are ready
      reason: NotAllDVsReady
      status: "False"
      type: DataVolumesReady
    created: true
    desiredGeneration: 1
    observedGeneration: 1
    printableStatus: Provisioning
    runStrategy: RerunOnFailure
    volumeSnapshotStatuses:
    - enabled: true
      name: rootdisk
    - enabled: false
      name: cloudinitdisk
      reason: Snapshot is not supported for this volumeSource type [cloudinitdisk]
- apiVersion: kubevirt.io/v1
  kind: VirtualMachine
  metadata:
    annotations:
      kubevirt.io/latest-observed-api-version: v1
      kubevirt.io/storage-observed-api-version: v1
      vm.kubevirt.io/validations: |
        [
          {
            "name": "minimal-required-memory",
            "path": "jsonpath::.spec.domain.memory.guest",
            "rule": "integer",
            "message": "This VM requires more memory.",
            "min": 2147483648
          }
        ]
    creationTimestamp: "2025-03-03T07:04:33Z"
    finalizers:
    - kubevirt.io/virtualMachineControllerFinalize
    generation: 1
    labels:
      app: fedora-tomato-zebra-41
      kubevirt.io/dynamic-credentials-support: "true"
      vm.kubevirt.io/template: fedora-server-small
      vm.kubevirt.io/template.namespace: openshift
      vm.kubevirt.io/template.revision: "1"
      vm.kubevirt.io/template.version: v0.32.2
    name: fedora-tomato-zebra-41
    namespace: foo
    resourceVersion: "45407"
    uid: 389d6f54-6189-43ed-b4a0-2de113aa34f4
  spec:
    dataVolumeTemplates:
    - apiVersion: cdi.kubevirt.io/v1beta1
      kind: DataVolume
      metadata:
        creationTimestamp: null
        name: fedora-tomato-zebra-41
      spec:
        sourceRef:
          kind: DataSource
          name: fedora
          namespace: openshift-virtualization-os-images
        storage:
          resources:
            requests:
              storage: 30Gi
    runStrategy: RerunOnFailure
    template:
      metadata:
        annotations:
          vm.kubevirt.io/flavor: small
          vm.kubevirt.io/os: fedora
          vm.kubevirt.io/workload: server
        creationTimestamp: null
        labels:
          kubevirt.io/domain: fedora-tomato-zebra-41
          kubevirt.io/size: small
      spec:
        architecture: amd64
        domain:
          cpu:
            cores: 1
            sockets: 1
            threads: 1
          devices:
            disks:
            - disk:
                bus: virtio
              name: rootdisk
            - disk:
                bus: virtio
              name: cloudinitdisk
            interfaces:
            - binding:
                name: l2bridge
              model: virtio
              name: default
            rng: {}
          features:
            acpi: {}
            smm:
              enabled: true
          firmware:
            bootloader:
              efi: {}
          machine:
            type: pc-q35-rhel9.4.0
          memory:
            guest: 2Gi
          resources: {}
        networks:
        - name: default
          pod: {}
        terminationGracePeriodSeconds: 180
        volumes:
        - dataVolume:
            name: fedora-tomato-zebra-41
          name: rootdisk
        - cloudInitNoCloud:
            userData: |-
              #cloud-config
              user: fedora
              password: 5chc-3tgx-8u27
              chpasswd: { expire: False }
          name: cloudinitdisk
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2025-03-03T07:05:56Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: null
      message: All of the VMI's DVs are bound and not running
      reason: AllDVsReady
      status: "True"
      type: DataVolumesReady
    - lastProbeTime: null
      lastTransitionTime: null
      message: 'cannot migrate VMI: PVC fedora-tomato-zebra-41 is not shared, live
        migration requires that all PVCs must be shared (using ReadWriteMany access
        mode)'
      reason: DisksNotLiveMigratable
      status: "False"
      type: LiveMigratable
    - lastProbeTime: null
      lastTransitionTime: null
      status: "True"
      type: StorageLiveMigratable
    - lastProbeTime: "2025-03-03T07:06:20Z"
      lastTransitionTime: null
      status: "True"
      type: AgentConnected
    created: true
    desiredGeneration: 1
    observedGeneration: 1
    printableStatus: Running
    ready: true
    runStrategy: RerunOnFailure
    volumeSnapshotStatuses:
    - enabled: true
      name: rootdisk
    - enabled: false
      name: cloudinitdisk
      reason: Snapshot is not supported for this volumeSource type [cloudinitdisk]
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
