test_outputs/connlist/udn_and_vms_test_5_connlist_output.txt
Permitted connectivity analyzed in Pod network:
all allowed connections utilize alternative network interfaces ((C)UDN/NAD) rather than the pod-network

Permitted connectivity analyzed in primary UDN foo:
0.0.0.0-255.255.255.255[External] => foo[udn]/fedora-apricot-pike-81[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => foo[udn]/fedora-tomato-zebra-41[VirtualMachine] : All Connections
foo[udn]/fedora-apricot-pike-81[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
foo[udn]/fedora-apricot-pike-81[VirtualMachine] => foo[udn]/fedora-tomato-zebra-41[VirtualMachine] : All Connections
foo[udn]/fedora-tomato-zebra-41[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
foo[udn]/fedora-tomato-zebra-41[VirtualMachine] => foo[udn]/fedora-apricot-pike-81[VirtualMachine] : All Connections
